--- a/src/components/Header/HeadNavigation/HeadNavigation.module.css
+++ b/src/components/Header/HeadNavigation/HeadNavigation.module.css
@@ -1,9 +1,9 @@
-.menuContainer {
+.menuWrapper {
   border-top: 1px solid #adadad;
   position: relative;
 }
 
-.menuContainer:after {
+.menuWrapper:after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -14,7 +14,7 @@
   z-index: -1;
 }
 
-.menu {
+.menuContainer {
   max-width: 1400px;
   margin: 0 auto;
   padding-left: 85px;
@@ -26,33 +26,3 @@
   border-bottom: 1px solid #adadad;
   background-color: rgba(255, 255, 255, .95);
 }
-
-.list {list-style-type: none;}
-
-.listItem {
-  display: inline-block;
-  transition: background-color .5s;
-  border-bottom: 1px solid #adadad;
-}
-
-.listItem:hover {
-  background-color: #f0f0f0;
-}
-
-.listItemInactive {
-  composes: listItem;
-  color: lightgray;
-  cursor: default;
-  padding: 15px;
-}
-
-.listItemInactive:hover {
-  background-color: transparent;
-}
-
-.link {
-  display: block;
-  padding: 15px;
-}
-
-.activeLink {font-weight: 900;}
