Intermediate desktop menu progress

--- a/src/components/Header/HeadNavigation/RootMenu/RootMenu.module.css
+++ b/src/components/Header/HeadNavigation/RootMenu/RootMenu.module.css
@@ -15,9 +15,7 @@
   padding: 15px;
 }
 
-.listItemInactive:hover {
-  background-color: transparent;
-}
+.listItemInactive:hover {background-color: transparent;}
 
 .link {
   display: block;
