--- a/src/components/Header/HeadNavigation/HeadNavigation.module.css
+++ b/src/components/Header/HeadNavigation/HeadNavigation.module.css
@@ -25,4 +25,5 @@
   position: absolute;
   border-bottom: 1px solid #adadad;
   background-color: rgba(255, 255, 255, .95);
+  /* backdrop-filter: saturate(180%) blur(20px); */
 }
