--- a/src/components/Header/HeadNavigation/SubMenu/SubMenu.module.css
+++ b/src/components/Header/HeadNavigation/SubMenu/SubMenu.module.css
@@ -9,10 +9,6 @@
 
 .subMenu img {width: 250px;}
 
-/*.listContainer {
-
-}*/
-
 .list {
   list-style-type: none;
   
@@ -22,8 +18,18 @@
   grid-auto-columns: 250px;
 }
 
-.listItem {margin-bottom: 15px;}
+.listItem {
+  margin-bottom: 15px;
+  cursor: default;
+  color: lightgray;
+}
 .listItem:last-child,
 .listItem:nth-child(6n) {
   margin: 0;
+}
+
+.listContainer {display: flex;}
+
+.listContainer + .listContainer + .listContainer {
+  display: none;
 }
