--- a/src/components/Header/HeadNavigation/HeadNavigation.module.css
+++ b/src/components/Header/HeadNavigation/HeadNavigation.module.css
@@ -3,15 +3,13 @@
   position: relative;
 }
 
-.rootMenuContainer:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+.borderBottom {
+  width: 100%;
   height: 1px;
   background-color: #adadad;
-  z-index: -1;
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
 }
 
 .subMenuContainer {
