--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,6 @@
 .header {
   padding-top: 50px;
+  position: relative;
 }
 
 .hgroup {
@@ -23,4 +24,17 @@
   position: absolute;
   top: 10px;
   right: 25px;
+}
+
+.navContainer {
+  position: absolute;
+  left: 0;
+  right: 0;
+  background-color: rgba(255, 255, 255, .95);
+}
+
+.fixedNavContainer {
+  composes: navContainer;
+  position: fixed;
+  top: -1px;
 }
