--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -33,6 +33,12 @@
   background-color: rgba(255, 255, 255, .95);
 }
 
+@media(max-width: 1024px) {
+  .navContainer {
+    top: 0; /* TODO BUG doesn't work due to inline styles (react-spring animation) */
+  }
+}
+
 .fixedNavContainer {
   composes: navContainer;
   position: fixed;
