--- a/src/assets/styles/common-styles.css
+++ b/src/assets/styles/common-styles.css
@@ -14,6 +14,12 @@ body {
   margin: 0;
 }
 
+#root {
+  display: grid;
+  min-height: 100%;
+  grid-template-rows: auto 1fr auto;
+}
+
 a {
   /* Remove gaps in links underline in iOS 8+ and Safari 8+. */
   -webkit-text-decoration-skip: objects;
