--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -35,7 +35,7 @@
 
 @media(max-width: 1024px) {
   .navContainer {
-    top: 0; /* TODO BUG doesn't work due to inline styles (react-spring animation) */
+    top: 0; /* FIXME doesn't work due to inline styles (react-spring animation) */
   }
 }
 
