--- a/src/components/Header/HeadNavigationDesktop/HeadNavigationDesktop.module.css
+++ b/src/components/Header/HeadNavigationDesktop/HeadNavigationDesktop.module.css
@@ -1,27 +1,20 @@
-.menuWrapper {
+.rootMenuContainer {
   border-top: 1px solid #adadad;
   position: relative;
 }
 
-.menuWrapper:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+.borderBottom {
+  width: 100%;
   height: 1px;
   background-color: #adadad;
-  z-index: -1;
-}
-
-.menuContainer {
-  max-width: 1400px;
-  margin: 0 auto;
-  padding-left: 85px;
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
 }
 
 .subMenuContainer {
   width: 100%;
+  min-height: 230px;
   position: absolute;
   border-bottom: 1px solid #adadad;
   background-color: rgba(255, 255, 255, .95);
