--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,6 @@
 .header {
   padding-top: 50px;
+  position: relative;
 }
 
 .hgroup {
@@ -16,7 +17,6 @@
 
 .subtitle {
   font-family: 'Playfair Display', serif;
-  font-style: italic;
   color: darkgray;
 }
 
@@ -24,4 +24,23 @@
   position: absolute;
   top: 10px;
   right: 25px;
+}
+
+.navContainer {
+  position: absolute;
+  left: 0;
+  right: 0;
+  background-color: rgba(255, 255, 255, .95);
+}
+
+@media(max-width: 1024px) {
+  .navContainer {
+    top: 0; /* FIXME doesn't work due to inline styles (react-spring animation) */
+  }
+}
+
+.fixedNavContainer {
+  composes: navContainer;
+  position: fixed;
+  top: -1px;
 }
