--- a/src/components/Header/HeadNavigationDesktop/SubMenu/SubMenu.module.css
+++ b/src/components/Header/HeadNavigationDesktop/SubMenu/SubMenu.module.css
@@ -18,3 +18,11 @@
 .listContainer + .listContainer + .listContainer {
   display: none;
 }
+
+.listContainerLeaving {
+  composes: listContainer;
+  position: absolute;
+  left: 0;
+  right: 0;
+  z-index: -1;
+}
