--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,4 +1,34 @@
 .footer {
   background-color: #000;
-  color: #fff;
+  color: #919191;
+  font-size: 13px;
+}
+
+.layout {
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 50px 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* tablet */
+@media(max-width: 1024px) {
+  .layout {
+    padding: 50px 75px;
+  }
+}
+
+/* mobile */
+@media(max-width: 768px) {
+  .layout {
+    padding: 25px;
+    flex-direction: column;
+    align-items: start;
+  }
+  .iconsContainer {
+    align-self: flex-end;
+    margin-top: 20px;
+  }
 }
