--- a/src/components/SocialMediaIcons/SocialMediaIcons.module.css
+++ b/src/components/SocialMediaIcons/SocialMediaIcons.module.css
@@ -9,3 +9,19 @@
 .layout > *:last-child {
   margin-right: 0;
 }
+
+.layout > a, .layout > a, svg {
+  display: block;
+}
+
+.layoutSmall {
+  composes: layout;
+}
+
+.layoutSmall > * {
+  margin-right: 7px;
+}
+
+.layoutSmall > *:last-child {
+  margin-right: 0;
+}
