added social media icons in desktop header, social icons appear with animation in desktop header and mobile menu, onClick elements became buttons

--- a/src/components/Header/HeaderMobile/HamburgerIcon/HamburgerIcon.module.css
+++ b/src/components/Header/HeaderMobile/HamburgerIcon/HamburgerIcon.module.css
@@ -9,6 +9,12 @@
   width: var(--mobile-menu-hamburger-size);
   height: calc(var(--mobile-menu-hamburger-size) * 0.75);
   position: relative;
+
+  /* reseting button */
+  border: 0;
+  background: transparent;
+  padding: 0;
+  outline: none;
 }
 
 .hamburger > div {
