--- a/src/components/Header/HeaderDesktop/HeaderDesktop.module.css
+++ b/src/components/Header/HeaderDesktop/HeaderDesktop.module.css
@@ -22,8 +22,15 @@
   margin: 0;
 }
 
-.langContainer {
-  margin: 15px 40px 0 0;
+.sideControlsContainer {
+  margin: 15px 30px 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.sideControlsSocialMedia {
+  margin-top: 15px;
 }
 
 .navContainer {
