--- a/src/components/Header/HeaderMobile/HeadNavigationMobile/MobileMenu/Tree/Tree.module.css
+++ b/src/components/Header/HeaderMobile/HeadNavigationMobile/MobileMenu/Tree/Tree.module.css
@@ -19,6 +19,13 @@
 }
 
 .icon {
+  /* reseting button */
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  border: 0;
+  outline: none;
+
   width: 16px;
   height: 16px;
   margin-right: 7px;
