--- a/src/components/SocialMediaIcons/SocialMediaIcons.module.css
+++ b/src/components/SocialMediaIcons/SocialMediaIcons.module.css
@@ -10,6 +10,12 @@
   margin-right: 0;
 }
 
+.layout > a {
+  opacity: .7;
+  transition: opacity 150ms;
+}
+.layout > a:hover {opacity: 1;}
+
 .layout > a, .layout > a, svg {
   display: block;
 }
