--- a/src/components/LangSelector/LangSelector.module.css
+++ b/src/components/LangSelector/LangSelector.module.css
@@ -1,18 +1,25 @@
 .langSelector {
-  display: flex;
-  align-items: center;
-  font-size: 15px;
-  cursor: pointer;
-  opacity: .7;
-  transition: opacity 200ms;
+  position: relative;
+}
 
+.langSelector button {
   /* button reseting */
   padding: 0;
   border: 0;
   background-color: transparent;
+  font-size: 15px;
+  cursor: pointer;
 }
 
-.langSelector:hover {
+.langSelectorInner {
+  display: flex;
+  align-items: center;
+
+  opacity: .7;
+  transition: opacity 200ms;
+}
+
+.langSelectorInner:hover {
   opacity: 1;
 }
 
@@ -32,4 +39,35 @@
 .triangleReverse {
   composes: triangle;
   transform: rotate(180deg);
+}
+
+.dropDown {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  transform: translateY(calc(100% + 4px));
+  z-index: 1;
+
+  list-style: none;
+  margin: 2px 0;
+  padding: 8px 0;
+
+  border: 1px solid rgba(0,0,0,.15);
+  border-radius: 4px;
+  background-color: #fff;
+}
+
+.dropDown button {
+  width: 100%;
+  padding: 4px 24px;
+  text-align: left;
+}
+
+.dropDown button:hover {
+  background-color: #f8f9fa;
+}
+
+.dropDown button:active {
+  color: #fff;
+  background-color: #007bff;
 }
