--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -5,12 +5,23 @@
 }
 
 .layout {
+  position: relative;
   max-width: 1300px;
   margin: 0 auto;
   padding: 50px 100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.iconsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.langContainer {
+  padding-bottom: 10px;
 }
 
 /* tablet */
@@ -23,12 +34,18 @@
 /* mobile */
 @media(max-width: 768px) {
   .layout {
-    padding: 25px;
+    padding: 0;
+    margin: 25px;
     flex-direction: column;
     align-items: start;
   }
   .iconsContainer {
     align-self: flex-end;
     margin-top: 20px;
+  }
+  .langContainer {
+    position: absolute;
+    right: 0;
+    transform: translateY(-100%);
   }
 }
