Added language switcher component, added animation appearing for this component

--- a/src/components/Header/HeaderDesktop/HeaderDesktop.module.css
+++ b/src/components/Header/HeaderDesktop/HeaderDesktop.module.css
@@ -30,7 +30,13 @@
 }
 
 .sideControlsSocialMedia {
-  margin-top: 15px;
+  margin-top: 10px;
+  z-index: -1;
+}
+
+.sideControlsDarkTheme {
+  margin-top: 10px;
+  z-index: -1;
 }
 
 .navContainer {
