--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,4 +1,51 @@
 .footer {
   background-color: #000;
-  color: #fff;
+  color: #919191;
+  font-size: 13px;
+}
+
+.layout {
+  position: relative;
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 50px 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.iconsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.langContainer {
+  padding-bottom: 10px;
+}
+
+/* tablet */
+@media(max-width: 1024px) {
+  .layout {
+    padding: 50px 75px;
+  }
+}
+
+/* mobile */
+@media(max-width: 768px) {
+  .layout {
+    padding: 0;
+    margin: 25px;
+    flex-direction: column;
+    align-items: start;
+  }
+  .iconsContainer {
+    align-self: flex-end;
+    margin-top: 20px;
+  }
+  .langContainer {
+    position: absolute;
+    right: 0;
+    transform: translateY(-100%);
+  }
 }
