add options button

--- a/src/components/Header/HeaderMobile/HamburgerIcon/HamburgerIcon.module.css
+++ b/src/components/Header/HeaderMobile/HamburgerIcon/HamburgerIcon.module.css
@@ -10,6 +10,9 @@
   height: calc(var(--mobile-menu-hamburger-size) * 0.75);
   position: relative;
 
+  /* fix positioning */
+  display: flex;
+
   /* reseting button */
   border: 0;
   background: transparent;
