--- a/src/components/DarkThemeSwitcher/DarkThemeSwitcher.module.css
+++ b/src/components/DarkThemeSwitcher/DarkThemeSwitcher.module.css
@@ -6,6 +6,8 @@
 
   cursor: pointer;
   border-radius: 34px;
+
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
 }
 
 .switchDarker {
@@ -64,4 +66,12 @@
 .checkbox:checked + .slider .round {
   background-color: #adadad;
   transform: translateX(80%);
+}
+
+.text {
+  position: absolute;
+  right: 0;
+  top: 3px;
+  white-space: nowrap;
+  transform: translateX(calc(100% + 7px));
 }
