implement dark mode

--- a/src/ApplicationNode.module.css
+++ b/src/ApplicationNode.module.css
@@ -2,9 +2,9 @@
   --white: 255, 255, 255;
   --black: 0, 0, 0;
 
-  /* TODO check out if all in use */
+  /* Fifty Shades of Grey */
   --brightGray: 240, 240, 240;
-  --lightGray: 240, 240, 240;
+  --lightGray: 211, 211, 211;
   --gray: 173, 173, 173;
   --darkGray: 99, 99, 99;
   --deepGray: 46, 46, 46;
@@ -18,6 +18,9 @@
 
   --primaryBackground: var(--white);
   --primaryColor: var(--black);
+  --primaryBorder: var(--gray);
+  --primaryDisabled: var(--lightGray);
+  --primaryHoverHighlight: var(--brightGray);
 
   background-color: rgb(var(--primaryBackground));
   color: rgb(var(--primaryColor));
@@ -25,9 +28,20 @@
   transition: background-color .2s, color .2s;
 }
 
+.ThemeWrapper * {
+  border-color: rgb(var(--primaryBorder));
+}
+
 .ThemeWrapperDarkMode {
   --primaryBackground: var(--deepDarkGray);
   --primaryColor: var(--white);
+  --primaryBorder: var(--darkGray);
+  --primaryDisabled: var(--darkGray);
+  --primaryHoverHighlight: var(--deepGray);
 
   composes: ThemeWrapper;
+}
+
+.ThemeWrapperDarkMode * {
+  border-color: rgb(var(--primaryBorder));
 }
