--- a/src/components/Header/HeaderDesktop/HeadNavigationDesktop/RootMenu/RootMenu.module.css
+++ b/src/components/Header/HeaderDesktop/HeadNavigationDesktop/RootMenu/RootMenu.module.css
@@ -10,28 +10,22 @@
 
 .listItem {
   display: inline-block;
-  transition: background-color .5s;
+  transition: background-color .2s ease;
 }
 
 .listItemActive {
   composes: listItem;
-  background-color: rgb(var(--brightGray));
-}
-.listDark .listItemActive {
-  background-color: rgb(var(--deepGray));
+  background-color: rgb(var(--primaryHoverHighlight));
 }
 
 .listItemActive .link {color: #0a4fff;}
 
 .listItemInactive {
   composes: listItem;
-  color: lightgray;
+  color: rgb(var(--primaryDisabled));
+  transition: color .2s ease;
   cursor: default;
   padding: 15px;
-}
-
-.listDark .listItemInactive {
-  color: rgb(var(--darkGray));
 }
 
 .listItemInactive:hover {background-color: transparent;}
@@ -43,6 +37,6 @@
 
 .activeLink {
   composes: listItemInactive;
-  color: black;
+  color: rgb(var(--primaryColor));
   margin-bottom: -1px;
 }
