--- a/src/components/Header/HeaderMobile/HeadNavigationMobile/HeadNavigationMobile.module.css
+++ b/src/components/Header/HeaderMobile/HeadNavigationMobile/HeadNavigationMobile.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   left: 0;
   right: 0;
-  background-color: #fff;
+  background-color: rgb(var(--primaryBackground));
   border-bottom: 1px lightgray solid;
   overflow: auto;
 }
