--- a/src/components/Header/HeaderDesktop/HeadNavigationDesktop/HeadNavigationDesktop.module.css
+++ b/src/components/Header/HeaderDesktop/HeadNavigationDesktop/HeadNavigationDesktop.module.css
@@ -1,12 +1,12 @@
 .rootMenuContainer {
-  border-top: 1px solid #adadad;
+  border-top: 1px solid;
   position: relative;
 }
 
 .borderBottom {
   width: 100%;
   height: 1px;
-  background-color: #adadad;
+  background-color: rgb(var(--primaryBorder));
   position: absolute;
   bottom: 0;
   z-index: 1;
@@ -16,20 +16,6 @@
   width: 100%;
   min-height: 230px;
   position: absolute;
-  border-bottom: 1px solid #adadad;
+  border-bottom: 1px solid;
   background-color: rgba(var(--primaryBackground), .95);
-}
-
-.rootMenuContainerDark {
-  composes: rootMenuContainer;
-  border-color: rgb(var(--darkGray));
-}
-
-.rootMenuContainerDark .borderBottom {
-  background-color: rgb(var(--darkGray));
-}
-
-.subMenuContainerDark {
-  composes: subMenuContainer;
-  border-color: rgb(var(--darkGray));
 }
