--- a/src/components/Header/HeaderMobile/HamburgerIcon/HamburgerIcon.module.css
+++ b/src/components/Header/HeaderMobile/HamburgerIcon/HamburgerIcon.module.css
@@ -1,7 +1,6 @@
-:root {
+.hamburger {
   --mobile-menu-hamburger-size: 24px;
   --mobile-menu-hamburger-line: 2px;
-  --mobile-menu-hamburger-color: #000;
   --mobile-menu-hamburger-duration: 1s;
 }
 
@@ -15,11 +14,22 @@
   display: flex;
 }
 
+.hamburgerDark {
+  composes: hamburger;
+}
+
 .hamburger > div {
   width: 100%;
   height: var(--mobile-menu-hamburger-line);
-  background-color: var(--mobile-menu-hamburger-color);
   position: absolute;
+  background-color: #000;
+}
+
+.hamburgerDark > div {
+  width: 100%;
+  height: var(--mobile-menu-hamburger-line);
+  position: absolute;
+  background-color: lightgray;
 }
 
 .hamburger > div:nth-child(1) {top: 0;}
