--- a/src/components/Header/HeaderMobile/HeaderMobile.module.css
+++ b/src/components/Header/HeaderMobile/HeaderMobile.module.css
@@ -5,10 +5,10 @@
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   padding: 0;
-  border-bottom: 1px solid lightgray;
+  border-bottom: 1px solid rgb(var(--primaryBorder));
   align-items: center;
   grid-auto-flow: dense;
-  background-color: rgba(255, 255, 255, .95);
+  background-color: rgba(var(--primaryBackground), .95);
   z-index: 3;
 }
 
