--- a/src/components/Header/HeaderMobile/HeadNavigationMobile/MobileMenu/MobileMenu.module.css
+++ b/src/components/Header/HeaderMobile/HeadNavigationMobile/MobileMenu/MobileMenu.module.css
@@ -14,6 +14,10 @@
   padding-left: 23px;
 }
 
+.inactiveListItems {
+  color: rgb(var(--primaryDisabled));
+}
+
 .subItemLine {
   composes: line;
   border: none;
