implemented very basic language changing

--- a/src/components/Header/HeaderDesktop/HeaderDesktop.module.css
+++ b/src/components/Header/HeaderDesktop/HeaderDesktop.module.css
@@ -15,11 +15,21 @@
   margin: 0;
 }
 
-.subtitle {
+.subtitleContainer {
   font-family: arial;
   font-size: 15px;
   color: darkgray;
   margin: 0;
+
+  position: relative;
+  height: 17px;
+}
+
+.subtitle {
+  position: absolute;
+  left: 0;
+  top: 0;
+  white-space: nowrap;
 }
 
 .sideControlsContainer {
