fix cursor defaults to inherits

--- a/src/components/Header/HeaderDesktop/HeadNavigationDesktop/RootMenu/RootMenu.module.css
+++ b/src/components/Header/HeaderDesktop/HeadNavigationDesktop/RootMenu/RootMenu.module.css
@@ -24,7 +24,7 @@
   composes: listItem;
   color: rgb(var(--primaryDisabled));
   transition: color .2s ease;
-  cursor: default;
+  cursor: inherit;
   padding: 15px;
 }
 
