--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -13,7 +13,7 @@
     font-family: 'Inconsolata', monospace;
 */
 
-body {
+body, button {
   font-family: "Ubuntu", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
