--- a/src/components/Image/Image.module.css
+++ b/src/components/Image/Image.module.css
@@ -79,6 +79,9 @@
 }
 
 .reloadImageBtn {
+  composes: absolute;
+  z-index: 5;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -87,11 +90,21 @@
   color: white;
   width: 100%;
   height: 100%;
-  
-  cursor: pointer;
-  transition: transform 0.5s ease-in-out 0s;
 
+  cursor: pointer;
   outline: none;
+
+  transition: transform 0.5s ease-in-out 0s;
+}
+
+.outline {
+  composes: absolute;
+  transition: all 0.2s ease-in-out 0s;
+}
+
+.reloadImageBtn:focus + .outline {
+  border: 1px rgba(33, 150, 243, 0.7) inset;
+  box-shadow: inset 0 0 7px rgb(33, 150, 243);
 }
 
 .reloadImageBtn:hover {
@@ -103,8 +116,4 @@
   font-weight: 600;
   margin: 18px 0;
   position: absolute;
-}
-
-.focus {
-  box-shadow: 0px 0px 4px 1px rgb(33, 150, 243);
 }
