implemented RootMenu animated transitioning between languages

--- a/src/components/Header/HeaderDesktop/HeadNavigationDesktop/HeadNavigationDesktop.module.css
+++ b/src/components/Header/HeaderDesktop/HeadNavigationDesktop/HeadNavigationDesktop.module.css
@@ -3,6 +3,11 @@
   position: relative;
 }
 
+.rootMenuTransitionLeave {
+  position: absolute;
+  width: 100%;
+}
+
 .borderBottom {
   width: 100%;
   height: 1px;
