--- a/src/components/Page/Page.module.css
+++ b/src/components/Page/Page.module.css
@@ -1,3 +1,9 @@
+.shadowRender {
+  height: 0;
+  visibility: hidden;
+  overflow: hidden;
+}
+
 .pageContainer {
   --paddingTop: 20px;
 }
@@ -17,6 +23,18 @@
   text-align: justify;
 }
 
+@media(max-width: 1024px) {
+  .page {
+    padding: 0 75px;
+  }
+}
+
+@media(max-width: 768px) {
+  .page {
+    padding: 0 25px;
+  }
+}
+
 .pageLeave {
   composes: page;
   position: absolute;
@@ -31,16 +49,8 @@
   margin: 0 auto;
 }
 
-/* tablet */
-@media(max-width: 1024px) {
-  .page {
-    padding: 0 75px;
-  }
-}
-
-/* mobile */
-@media(max-width: 768px) {
-  .page {
-    padding: 0 25px;
-  }
+.footer {
+  background-color: #000;
+  color: #919191;
+  font-size: 13px;
 }
