--- a/src/components/Page/Page.module.css
+++ b/src/components/Page/Page.module.css
@@ -1,3 +1,11 @@
+.title {
+  font-family: Arial, sans-serif;
+  line-height: 52px;
+  margin-bottom: 32px;
+  margin-top: 0;
+  font-weight: 700;
+}
+
 .shadowRender {
   height: 0;
   visibility: hidden;
