--- a/src/assets/styles/common-styles.css
+++ b/src/assets/styles/common-styles.css
@@ -2,6 +2,8 @@ html,
 body,
 #root {
   height: 100%;
+  width: 100%;
+  max-width: 100%;
 }
 
 html {
@@ -27,12 +29,6 @@ body {
 #root {
   display: grid;
   min-height: 100%;
-  grid-template-rows: auto 1fr auto;
-
-  /* Screens wider than 1920px are not supported. At least for now. */
-  width: 100%;
-  max-width: 1920px;
-  margin: 0 auto;
 }
 
 a {
