--- a/src/components/Page/FooterContent/FooterNavigation/FooterNavigation.module.css
+++ b/src/components/Page/FooterContent/FooterNavigation/FooterNavigation.module.css
@@ -7,12 +7,11 @@
   gap: 10px;
 }
 
-@media (max-width: 425px) {
-  .list {
-    grid-template-rows: initial;
-    grid-auto-flow: initial;
-    grid-auto-columns: auto;
-  }
+.listShrank {
+  composes: list;
+  grid-template-rows: initial;
+  grid-auto-flow: initial;
+  grid-auto-columns: auto;
 }
 
 .link {
