--- a/src/components/Page/Page.module.css
+++ b/src/components/Page/Page.module.css
@@ -23,24 +23,34 @@
 }
 
 .page {
-  max-width: 680px;
-  margin: 0 auto;
-  padding: 0 100px;
   height: 100%;
 
-  text-align: justify;
-}
+  --gap: clamp(1rem, 6vw, 3rem);
+  --full: minmax(var(--gap), 1fr);
+  --feature: minmax(0, 230px);
+  --popout: minmax(0, 2rem);
 
-@media (max-width: 1024px) {
-  .page {
-    padding: 0 75px;
-  }
+  display: grid;
+  grid-template-columns:
+    [full-start] var(--full)
+    [feature-start] var(--feature)
+    [popout-start] var(--popout)
+    [content-start] min(680px, 100% - var(--gap) * 2) [content-end]
+    var(--popout) [popout-end]
+    var(--feature) [feature-end]
+    var(--full) [full-end];
 }
-
-@media (max-width: 768px) {
-  .page {
-    padding: 0 25px;
-  }
+.page > * {
+  grid-column: content;
+}
+.popout {
+  grid-column: popout;
+}
+.feature {
+  grid-column: feature;
+}
+.full {
+  grid-column: full;
 }
 
 .pageLeave {
