improve layout (margins for paragraphs, headings, images)

--- a/src/components/Image/Image.module.css
+++ b/src/components/Image/Image.module.css
@@ -17,6 +17,12 @@
 
 .figure {
   margin: 0;
+  margin-bottom: 2em;
+}
+
+.figureMobile {
+  composes: figure;
+  margin-bottom: 1.5em;
 }
 
 .imageContainer {
