--- a/src/components/TilesCarousel/TilesCarousel.module.css
+++ b/src/components/TilesCarousel/TilesCarousel.module.css
@@ -1,5 +1,50 @@
-.grid {
+.wrapper {
+  overflow: hidden;
+  margin-bottom: 32px;
+}
+
+.container {
   display: flex;
   gap: 20px;
+}
+
+.card {
+  overflow: hidden;
+  position: relative;
+  height: 300px;
+  /* min-width: 300px; */
+}
+
+.cardInfo {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  padding: 20px;
+
+  /* theme based ? */
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+
+  cursor: pointer;
+
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   justify-content: center;
+  align-items: center;
+
+  text-align: center;
+  user-select: none;
+}
+.cardInfo > * {
+  margin: 0;
+}
+.card img {
+  transition: transform 0.5s ease;
+}
+.card:hover img {
+  transform: scale(1.1);
 }
