dynamic carousel items (with api), add ukrainian for tiles, fix width of carousel on resize

--- a/src/components/TilesCarousel/TilesCarousel.module.css
+++ b/src/components/TilesCarousel/TilesCarousel.module.css
@@ -1,6 +1,12 @@
-.wrapper {
-  overflow: hidden;
+.root {
+  position: relative;
+  height: 300px;
   margin-bottom: 32px;
+}
+
+.carouselContainer {
+  overflow: hidden;
+  position: absolute;
 }
 
 .cardContainer {
@@ -71,4 +77,17 @@
 
 .dates {
   text-align: end;
+}
+
+.grid {
+  display: grid;
+  grid-auto-flow: column;
+  height: 300px;
+  gap: 20px;
+  overflow: hidden;
+}
+
+.grid > div {
+  width: 300px;
+  background-color: green;
 }
